--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-image: url('img/NARUTO.full.2297141.png');
+    background-image: url(https://sun9-1.userapi.com/impg/nFPps93zXah4V-hwcOyH6NieRALJfmjb5Xm1gQ/EkDqeUoqmcU.jpg?size=1024x642&quality=96&sign=37a49803e1a0013832e3b59054c7abda&type=album);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
